[belajar-apache-maven] dependency management

--- a/belajar-apache-maven/belajar-apache-maven-app/pom.xml
+++ b/belajar-apache-maven/belajar-apache-maven-app/pom.xml
@@ -16,7 +16,15 @@
         <dependency>
             <groupId>akur-maven</groupId>
             <artifactId>belajar-apache-maven-data</artifactId>
-            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
         </dependency>
     </dependencies>
 </project>
